2017-05-03  Markus Gans  <guru.mail@muenster.de>
	* Fix resetColorMap in FTerm

2017-05-02  Markus Gans  <guru.mail@muenster.de>
	* Outsourcing of data from FTerm to the classes FTermios, 
	  FTermDetection and FTermcapQuirks

2017-04-19  Markus Gans  <guru.mail@muenster.de>
	* Placing the terminal types in FTerm in a separate structure

2017-04-15  Markus Gans  <guru.mail@muenster.de>
	* Fake-reverse bugfix in FOptiAttr
	* Strict use of fc::colornames in FOptiAttr
	* Stream support for FPoint and FRect

2017-04-11  Markus Gans  <guru.mail@muenster.de>
	* Remove Cygwin bold color quirks fix in FOptiAttr
	* Added unit test for FOptiAttr

2017-04-08  Markus Gans  <guru.mail@muenster.de>
	* Improved Linux terminal quirks
	* Improvement in class FOptiAttr

2017-04-02  Markus Gans  <guru.mail@muenster.de>
	* Improved cygwin terminal quirks
	* Optimized character set switching in FOptiAttr

2017-03-30  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FOptiMove

2017-03-28  Markus Gans  <guru.mail@muenster.de>
	* Add boundary check to FOptiMove

2017-03-25  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for the mouse classes
	* Fixed small parsing errors with mouse events

2017-03-17  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FObject
	* Some minor bug fixes in FObject

2017-03-13  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FRect

2017-03-11  Markus Gans  <guru.mail@muenster.de>
	* Added unit test for FPoint

2017-03-10  Markus Gans  <guru.mail@muenster.de>
	* Unit tests for the FString class completed
	* Minor bug fixes in FString

2017-02-25  Markus Gans  <guru.mail@muenster.de>
	* First CppUnit tests implemented

2017-02-22  Markus Gans  <guru.mail@muenster.de>
	* Generalize mouse event passing in FMenuItem

2017-02-19  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FTerm::init_termcaps
	* Refactoring FTerm::init_encoding

2017-02-18  Markus Gans  <guru.mail@muenster.de>
	* Avoid scroll bar overshooting