@@ -220,8 +220,8 @@ bool FButton::setFlat (bool on)
 bool FButton::setShadow (bool on)
 {
   if ( on
-    && term_encoding != fc::VT100
-    && term_encoding != fc::ASCII )
+    && getEncoding() != fc::VT100
+    && getEncoding() != fc::ASCII )
   {
     flags |= fc::shadow;
     setShadowSize(1,1);
